--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
         <video class="video-player" id="user-1" autoplay playsinline></video>
         <video class="video-player" id="user-2" autoplay playsinline></video>
     </div>
+    <div id="controls">
+        <div class="control-container" id="camera-btn">
+            <img src="icons/camera.png" alt="">
+        </div>
+        <div class="control-container" id="mic-btn">
+            <img src="icons/mic.png" alt="">
+        </div>
+        <a href="lobby.html">
+            <div class="control-container" id="leave-btn">
+                <img src="icons/phone.png" alt="">
+            </div>
+        </a>
+    </div>
 </body>
 
 <!-- <script src="agora-rtm-2.1.7.min.js"></script> -->
